# audeamus-bot

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
audeamus_bot/: __init__.py  __main__.py  bot.py
audeamus_bot/api/: tba.py  tba_api.py
audeamus_bot/commands/: command_tree.py  frc_command_tree.py  frc_commands.py  tba_commands.py
audeamus_bot/helpers/: format.py  page.py
audeamus_bot/types/: tba_types.py
