[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audeamus_bot"
version = "0.0.2"
authors = [
  { name="MGCI Robotics", email="roboticsmgci@gmail.com" },
]
description = "Access data about the FIRST Robotics Competition"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp-client-cache",
    "discord.py",
    "python-dotenv",
]

[project.urls]
"Homepage" = "https://github.com/roboticsmgci/audeamus-bot"
"Bug Tracker" = "https://github.com/roboticsmgci/audeamus-bot/issues"